Resolve bugs e adiciona features de tipos

--- a/src/views/error.pug
+++ b/src/views/error.pug
@@ -5,8 +5,8 @@ block content
         include includes/sidebar
         .container
             include includes/navbar
-            .card.m-2
-                .card-body.flex
+            .row.card.m-2
+                .card-body
                     h5.card-title Erro 404 - Página não encontrada
                     div.text-center
                         img.p-5.card-img-topimg(src='/public/images/missingno.jpg')
