--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -13,7 +13,7 @@ block content
                     | Aqui você poderá explorar o mundo Pokémon através das suas 
                     a(href="/generations") gerações/regiões
                     |, 
-                    a(href="/pokemons") pokémons
+                    a(href="/pokemons?offset=0") pokémons
                     |, 
                     a(href="/types") tipos 
                     | e 
@@ -24,7 +24,7 @@ block content
                         li.list-group-item 
                             a(href="/generations") Gerações
                         li.list-group-item 
-                            a(href="/pokemons") Pokémons
+                            a(href="/pokemons?offset=10") Pokémons
                         li.list-group-item 
                             a(href="/types") Tipos
                         li.list-group-item
