--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,18 +1,20 @@
 body {
-    min-height: 100vh;
+    min-height: 100%;
+    height: 100%;
     min-height: -webkit-fill-available;
-}
+  }
   
-html {
+  html {
+    height: 100%;
     height: -webkit-fill-available;
-}
-
-main {
+  }
+  
+  main {
     display: flex;
     flex-wrap: nowrap;
-    height: 100vh;
+    height: 100%;
     height: -webkit-fill-available;
-    max-height: 100vh;
+    max-height: 100%;
     overflow-x: auto;
     overflow-y: auto;
 
@@ -25,7 +27,7 @@ main {
 .b-example-divider {
     flex-shrink: 0;
     width: 1.5rem;
-    height: 100vh;
+    height: 100%;
     background-color: rgba(0, 0, 0, .1);
     border: solid rgba(0, 0, 0, .15);
     border-width: 1px 0;
@@ -109,4 +111,10 @@ main {
 
 .half-width {
     width: 50%
+}
+
+.fill-height {
+    height: 100%;
+    min-height: 100%;
+    overflow: auto;
 }
