--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -12,5 +12,5 @@ block content
                         | Este é o trabalho prático da cadeira INF01021 - Projeto de Hiperdocumentos da 
                         a(href='https://www.ufrgs.br', target='_blank') Universidade Federal do Rio Grande do Sul (UFRGS)
                         |  referente ao semestre 2021/2 e visa implementar uma enciclopédia 
-                        a(href='/pokemons') Pokémon
+                        a(href='/pokemons?offset=0') Pokémon
                         |  utilizando os conceitos de roteiro guiado, indexado e guiado indexado.
