--- a/src/views/generation.pug
+++ b/src/views/generation.pug
@@ -19,11 +19,12 @@ block content
                             each pokemon in pokemons
                                 tr
                                 td
-                                    a(href='/pokemon?id='+pokemon.id)= pokemon.name.charAt(0).toUpperCase() + pokemon.name.slice(1)
+                                    a(href='/pokemons/pokemon?id='+pokemon.id)= pokemon.name.charAt(0).toUpperCase() + pokemon.name.slice(1)
                                 td
                                     img(src=pokemon.sprites.other['official-artwork'].front_default, style='width:96px; height:96px;')
                                 td
                                     each pokemonTypes in pokemon.types
-                                            a(href=pokemonTypes.type.url)= pokemonTypes.type.name
+                                            - var arr = pokemonTypes.type.url.split('/')    
+                                            a(href='/types/type?id='+arr[arr.length-2])= pokemonTypes.type.name
                                             | , 
                                 tr
