--- a/src/views/includes/sidebar.pug
+++ b/src/views/includes/sidebar.pug
@@ -1,4 +1,4 @@
-.flex-shrink-0.p-3.bg-white(style='width: 280px;').fill-height
+.d-flex.flex-column.flex-shrink-0.p-3.bg-white(style='width: 280px;')
     a.d-flex.align-items-center.pb-3.mb-3.link-dark.text-decoration-none.border-bottom(href='/')
         img.me-2.d-sm-none.d-lg-inline(src='/public/images/pokeball.svg', alt='Poquebola', width="24", height="24")
         span.fs-5.fw-semibold Pokédex
@@ -9,9 +9,9 @@
                     a.link-dark.rounded(href='/') Página Inicial
                 li
                     - var rand = Math.floor(Math.random() * 898 + 1);
-                    a.link-dark.rounded(href='/pokemon?id='+rand) Pokémon aleatório
+                    a.link-dark.rounded(href='/pokemons/pokemon?id='+rand) Pokémon aleatório
                 li
-                    a.link-dark.rounded(href="/pokemons") Pokémons
+                    a.link-dark.rounded(href="/pokemons?offset=0") Pokémons
                 li
                     a.link-dark.rounded(href="/abilities") Habilidades
         li.mb-1
@@ -42,45 +42,45 @@
             #types-collapse.collapse
                 ul.btn-toggle-nav.list-unstyled.fw-normal.pb-1.small
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/1/') normal
+                        a.link-dark.rounded(href='/types/types/types/type?id=1') normal
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/2/') fighting
+                        a.link-dark.rounded(href='/types/types/types/type?id=2') fighting
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/3/') flying
+                        a.link-dark.rounded(href='/types/types/types/type?id=3') flying
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/4/') poison
+                        a.link-dark.rounded(href='/types/types/types/type?id=4') poison
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/5/') ground
+                        a.link-dark.rounded(href='/types/types/types/type?id=5') ground
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/6/') rock
+                        a.link-dark.rounded(href='/types/types/types/type?id=6') rock
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/7/') bug
+                        a.link-dark.rounded(href='/types/types/types/type?id=7') bug
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/8/') ghost
+                        a.link-dark.rounded(href='/types/types/types/type?id=8') ghost
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/9/') steel
+                        a.link-dark.rounded(href='/types/types/types/type?id=9') steel
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/10/') fire
+                        a.link-dark.rounded(href='/types/types/types/type?id=10') fire
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/11/') water
+                        a.link-dark.rounded(href='/types/types/types/type?id=11') water
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/12/') grass
+                        a.link-dark.rounded(href='/types/types/types/type?id=12') grass
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/13/') electric
+                        a.link-dark.rounded(href='/types/types/types/type?id=13') electric
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/14/') psychic
+                        a.link-dark.rounded(href='/types/types/types/type?id=14') psychic
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/15/') ice
+                        a.link-dark.rounded(href='/types/types/types/type?id=15') ice
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/16/') dragon
+                        a.link-dark.rounded(href='/types/types/types/type?id=16') dragon
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/17/') dark
+                        a.link-dark.rounded(href='/types/types/types/type?id=17') dark
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/18/') fairy
+                        a.link-dark.rounded(href='/types/types/types/type?id=18') fairy
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/10001/') unknown
+                        a.link-dark.rounded(href='/types/types/types/type?id=10001') unknown
                     li
-                        a.link-dark.rounded(href='/type?id=https://pokeapi.co/api/v2/type/10002/') shadow
+                        a.link-dark.rounded(href='/types/types/types/type?id=10002') shadow
 
                             
         li.border-top.my-3
@@ -91,3 +91,25 @@
                 ul.btn-toggle-nav.list-unstyled.fw-normal.pb-1.small
                     li
                         a.link-dark.rounded(href='/about') Sobre
+        br
+        |
+        br
+        |
+        br
+        |
+        br
+        |
+        br
+        |
+        br
+        |
+        br
+        |
+        br
+        |
+        br
+        |
+        br
+        |
+        br
+        |
