Adiciona informações de peso e altura nos pokemons

--- a/src/views/pokemon.pug
+++ b/src/views/pokemon.pug
@@ -25,11 +25,11 @@ block content
                                 td id
                                 td= pokemon.id
                                 tr
-                                td Peso
-                                td= pokemon.weight 
+                                td Peso (Kg)
+                                td= pokemon.weight/10 
                                 tr                                
-                                td Altura
-                                td= pokemon.height 
+                                td Altura (m)
+                                td= pokemon.height/10
                                 tr
                                 td Tipos
                                 td
