Adiciona movimentos e corrige bugs

--- a/src/views/includes/sidebar.pug
+++ b/src/views/includes/sidebar.pug
@@ -13,7 +13,7 @@
                 li
                     a.link-dark.rounded(href="/pokemons?offset=0") Pokémons
                 li
-                    a.link-dark.rounded(href="/abilities") Habilidades
+                    a.link-dark.rounded(href="/moves") Movimentos
         li.mb-1
             button.btn.btn-toggle.align-items-center.rounded.collapsed(data-bs-toggle='collapse' data-bs-target='#generations-collapse' aria-expanded='false')
                 | Gerações
@@ -42,45 +42,47 @@
             #types-collapse.collapse
                 ul.btn-toggle-nav.list-unstyled.fw-normal.pb-1.small
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=1') normal
+                        a.link-dark.rounded(href='types/type?id=7') Bug
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=2') fighting
+                        a.link-dark.rounded(href='types/type?id=18') Dairy
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=3') flying
+                        a.link-dark.rounded(href='types/type?id=17') Dark
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=4') poison
+                        a.link-dark.rounded(href='types/type?id=16') Dragon
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=5') ground
+                        a.link-dark.rounded(href='types/type?id=13') Electric
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=6') rock
+                        a.link-dark.rounded(href='types/type?id=2') Fighting
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=7') bug
+                        a.link-dark.rounded(href='types/type?id=10') Fire
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=8') ghost
+                        a.link-dark.rounded(href='types/type?id=3') Flying
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=9') steel
+                        a.link-dark.rounded(href='types/type?id=8') Ghost
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=10') fire
+                        a.link-dark.rounded(href='types/type?id=12') Grass
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=11') water
+                        a.link-dark.rounded(href='types/type?id=5') Ground
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=12') grass
+                        a.link-dark.rounded(href='types/type?id=15') Ice
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=13') electric
+                        a.link-dark.rounded(href='types/type?id=1') Normal
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=14') psychic
+                        a.link-dark.rounded(href='types/type?id=4') Poison
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=15') ice
+                        a.link-dark.rounded(href='types/type?id=14') Psychic
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=16') dragon
+                        a.link-dark.rounded(href='types/type?id=6') Rock
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=17') dark
+                        a.link-dark.rounded(href='types/type?id=10002') Shadow
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=18') fairy
+                        a.link-dark.rounded(href='types/type?id=9') Steel
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=10001') unknown
+                        a.link-dark.rounded(href='types/type?id=10001') Unknown
                     li
-                        a.link-dark.rounded(href='/types/types/types/type?id=10002') shadow
+                        a.link-dark.rounded(href='types/type?id=11') Water
+
+                        
 
                             
         li.border-top.my-3
