--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -17,7 +17,7 @@ block content
                     |, 
                     a(href="/types") tipos 
                     | e 
-                    a(href="/abilities") habilidades 
+                    a(href="/moves?offset=0") movimentos 
                     |  Em gerações você terá uma lista de pokémons de cada 
                     | geração, já em pokémons uma lista com todos os pokémons assim como em tipos e habilidades.
                     ul.mt-3.list-group.col-sm-4
@@ -28,6 +28,6 @@ block content
                         li.list-group-item 
                             a(href="/types") Tipos
                         li.list-group-item
-                            a(href="/abilities") Habilidades
+                            a(href="/moves?offset=0") Movimentos
 
 
