Adiciona descrição de movimentos

--- a/src/views/includes/sidebar.pug
+++ b/src/views/includes/sidebar.pug
@@ -13,7 +13,7 @@
                 li
                     a.link-dark.rounded(href="/pokemons?offset=0") Pokémons
                 li
-                    a.link-dark.rounded(href="/moves") Movimentos
+                    a.link-dark.rounded(href="/moves?offset=0") Movimentos
         li.mb-1
             button.btn.btn-toggle.align-items-center.rounded.collapsed(data-bs-toggle='collapse' data-bs-target='#generations-collapse' aria-expanded='false')
                 | Gerações
