Adiciona descrição sobre Pokémons e sobre a aplicação

--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -14,3 +14,11 @@ block content
                         |  referente ao semestre 2021/2 e visa implementar uma enciclopédia 
                         a(href='/pokemons?offset=0') Pokémon
                         |  utilizando os conceitos de roteiro guiado, indexado e guiado indexado.
+                    p.card-text 
+                        | Este trabalho é totalmente educacional e sem fins monetários ou lucrativos e não pretende 
+                        | ferir qualquer direito da 
+                        a(href='https://www.pokemon.com/br/pokedex/charizard') Nintendo/Creatures Inc./GAME FREAK inc. TM
+                        |. O uso desta aplicação 
+                        | bem como a veracidade da mesma não é de responsabilidade dos autores.
+
+                    
