--- a/src/views/includes/sidebar.pug
+++ b/src/views/includes/sidebar.pug
@@ -93,6 +93,8 @@
                 ul.btn-toggle-nav.list-unstyled.fw-normal.pb-1.small
                     li
                         a.link-dark.rounded(href='/about') Sobre
+                    li
+                        a.link-dark.rounded(href='/references') Referências
         br
         |
         br
