Adiciona links uteis

--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -17,7 +17,7 @@ block content
                     p.card-text 
                         | Este trabalho é totalmente educacional e sem fins monetários ou lucrativos e não pretende 
                         | ferir qualquer direito da 
-                        a(href='https://www.pokemon.com/br/pokedex/charizard') Nintendo/Creatures Inc./GAME FREAK inc. TM
+                        a(href='https://www.pokemon.com/br/', target="_blank") Nintendo/Creatures Inc./GAME FREAK inc. TM
                         |. O uso desta aplicação 
                         | bem como a veracidade da mesma não é de responsabilidade dos autores.
 
