--- a/src/views/moves.pug
+++ b/src/views/moves.pug
@@ -18,7 +18,11 @@ block content
                     a(href='/pokemons?offset=0') Pokémon 
                     | pode saber de um até quatro movimentos ao mesmo momento dentro um grupo 
                     | predeterminado de movimentos. Existem Pokémons que possuem grupos predeterminados de até 250 movimentos
-                    | diferentes enquanto outros com apenas 1 movimento, como Mew e Ditto respectivamente.
+                    | diferentes enquanto outros com apenas 1 movimento, como 
+                    a(href='/pokemons/pokemon/?id=151') Mew 
+                    | e 
+                    a(href='/pokemons/pokemon/?id=132') Ditto 
+                    |respectivamente.
 
                     p.card-text
                     | Os movimentos possuem os seguintes atributos:
