--- a/src/views/pokemons.pug
+++ b/src/views/pokemons.pug
@@ -10,7 +10,9 @@ block content
                     h5.card-title='Pokémons'
                     p.card-text 
                     | Os Pokémons em si são personagens baseados em animais, plantas, objetos e outros elementos pertencentes à 
-                    | franquia homônima de posse da Nintendo. Os Pokémons existem 
+                    | franquia homônima de posse da 
+                    a(href='https://www.pokemon.com/br/', target="_blank") Nintendo
+                    |. Os Pokémons existem 
                     | em diversas mídias como anime, jogos de cartas, filmes e jogos. O primeiro jogo foi lançado em 1996 para 
                     | Game Boy.
 
