--- a/src/views/references.pug
+++ b/src/views/references.pug
@@ -10,14 +10,14 @@ block content
                     h5.card-title Referências utilizadas
                     ul.mt-3.list-group.col-sm-6
                         li.list-group-item Quer saber como implementar um site? Utilize 
-                            a(href='https://developer.mozilla.org/pt-BR/docs/Learn/Server-side/Express_Nodejs/Introduction') o tutorial da Mozilla
+                            a(href='https://developer.mozilla.org/pt-BR/docs/Learn/Server-side/Express_Nodejs/Introduction', target="_blank") o tutorial da Mozilla
                             |.
                         li.list-group-item Quer saber mais sobre Pokémons? 
-                            a(href="https://bulbapedia.bulbagarden.net/wiki/Main_Page") Bulbapedia
+                            a(href="https://bulbapedia.bulbagarden.net/wiki/Main_Page", target="_blank") Bulbapedia
                         li.list-group-item Quer saber mais sobre a API? 
-                            a(href="https://pokeapi.co/") PokeAPI
+                            a(href="https://pokeapi.co/", target="_blank") PokeAPI
                         li.list-group-item Para informações oficiais sobre Pokémons: 
-                            a(href="https://www.pokemon.com/br/") Site Oficial Pokémon
+                            a(href="https://www.pokemon.com/br/", target="_blank") Site Oficial Pokémon
                         li.list-group-item Se você procura o código fonte dessa aplicação: 
-                            a(href="https://github.com/jobedylbas/hyperdocument") Github
+                            a(href="https://github.com/jobedylbas/hyperdocument", target="_blank") Github
                         
