--- a/src/views/pokemon.pug
+++ b/src/views/pokemon.pug
@@ -17,12 +17,12 @@ block content
                                 p.mb-1.me-1= '>'
 
                         img.card-img-topimg(src=pokemon.sprites.other['official-artwork'].front_default, style='width:128px; height:128px;')
-                    div.m-5
-                        table.table.m-2
+                    div.mt-3
+                        table.table
                             thead
                             tbody
                                 tr
-                                td id
+                                td.col-2 id
                                 td= pokemon.id
                                 tr
                                 td Peso (Kg)
